# process_photo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  clean_cmake.sh  cleanup_for_push.sh  cmake_install.cmake  compose_frame.cpp  mwe_for_learning.cpp  one_canvas_pipeline.cpp  parameters.cfg  process  run_process.sh
include/: exhibit.h  frame.h
src/: .frame.cpp.swp  .process.cpp.swp  canvas.cpp  frame.cpp  main.cpp  parameters.cpp  process.cpp  utils.cpp
